# statexfat

./: .gitignore  Makefile.am  README.md  configure.ac
include/: statexfat.h
src/: exfat.c  statexfat.c
